adding logic for signalR, reviewing datatables

--- a/CatchMe/Content/Site.css
+++ b/CatchMe/Content/Site.css
@@ -284,7 +284,7 @@ width:100px;
   .color-low { color: #5BC0DE;}
   .color-medium { color: #ffd800;}
   .color-high { color: #D9534F;}
-  .color-immediate {color: #b200ff;}
+  .color-top {color: #b200ff;}
   .color-white {color:#ffffff;}
 /* overriding chosen */
 
