--- a/CatchMe/Views/Tasks/EditTask.cshtml
+++ b/CatchMe/Views/Tasks/EditTask.cshtml
@@ -257,11 +257,20 @@
                         <br /><br />
                 
             @{ var cnt = 0;}
-                        @foreach (var comment in Model.comments.OrderByDescending(x => x.created_on))
+                        @foreach (var comment in Model.comments.OrderByDescending(x => x.updated_on))
                         {
 
                             <div class="task-title"><span style="font-size:.5em; padding:5px;margin-bottom:10px;" class="alert alert-info">C.@comment.comment_id</span> @(string.IsNullOrWhiteSpace(comment.title) ? "No Title.." : comment.title) - </div>
-                            <small>@comment.user.fullname on @comment.created_on.Value.ToString("dd MMM yyyy HH:mm")</small>
+
+                            if (comment.updated_by > 0)
+                            {
+                                <small>@comment.user.fullname on @comment.updated_on.ToString("dd MMM yyyy HH:mm")</small>
+                            }
+                            else
+                            {
+                                <small>@comment.user1.fullname on @comment.created_on.Value.ToString("dd MMM yyyy HH:mm")</small>
+                            }
+
                             <a href="javascript:void(0);" class="shownextsection toggleshowhide">@(cnt<3?"(hide)":"[more]")</a>
                             <section class="allcomments" style="display:@(cnt<3?"block":"none")">
                                 <h4 style="word-break:break-all">
