--- a/CatchMe/Views/Shared/_Layout.cshtml
+++ b/CatchMe/Views/Shared/_Layout.cshtml
@@ -83,6 +83,7 @@
     @Scripts.Render("~/bundles/custom")
     @Scripts.Render("~/bundles/combodate")
     @RenderSection("scripts", required: false)
+    @RenderSection("Modals", required: false)
 
             
     <!--Script references. -->
