--- a/CatchMe/Views/Test/Index.cshtml
+++ b/CatchMe/Views/Test/Index.cshtml
@@ -25,8 +25,8 @@
 <script>
     tinymce.init({
         selector: '.mytextarea',
-        plugins: "textcolor table code advlist emoticons charmap hr image link",
-        toolbar: "bold italic underline forecolor backcolor table strikethrough superscript subscript code emoticons bullist numlist charmap image link"
+        plugins: "textcolor table code advlist emoticons charmap hr image link fullscreen",
+        toolbar: "bold italic underline forecolor backcolor table strikethrough superscript subscript code emoticons bullist numlist charmap image link fullscreen"
     });
 </script>
 
